--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   phone_form_field: ^8.1.0
   flutter_otp_text_field: ^1.1.1
+  firebase_core: ^2.17.0
 
 dev_dependencies:
   flutter_test:
