--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   phone_form_field: ^8.1.0
   flutter_otp_text_field: ^1.1.1
   firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
 
 dev_dependencies:
   flutter_test:
