--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cached_network_image: ^3.3.0
   phone_form_field: ^8.1.0
   flutter_otp_text_field: ^1.1.1
   firebase_core: ^2.17.0
