--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^4.10.1 
   firebase_storage: ^11.2.7
   cloud_firestore: ^4.9.2
+  loading_indicator: ^3.1.1
 
 dev_dependencies:
   flutter_test:
