--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   firebase_storage: ^11.2.7
   cloud_firestore: ^4.9.2
   loading_indicator: ^3.1.1
-
+  image_picker: ^1.0.4
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
