--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,12 @@ dependencies:
   cloud_firestore: ^4.9.2
   loading_indicator: ^3.1.1
   image_picker: ^1.0.4
-  
+  camera: ^0.10.5+5
+  flutter_downloader: ^1.11.3
+  file_picker: ^5.5.0
+  video_player: ^2.7.2
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
