--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   shared_preferences: ^2.2.1
   emoji_picker_flutter: ^1.6.2
   intl: ^0.18.1
+  chewie: ^1.7.1
 
 dev_dependencies:
   flutter_test:
