--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   emoji_picker_flutter: ^1.6.2
   intl: ^0.18.1
   chewie: ^1.7.1
+  dio: ^4.0.4
+  gallery_saver: ^2.3.2
 
 dev_dependencies:
   flutter_test:
