--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,13 +56,14 @@ dependencies:
   emoji_picker_flutter: ^1.6.2
   intl: ^0.18.1
   chewie: ^1.7.1
-  flutter_local_notifications: ^16.1.0
-  firebase_messaging: ^14.7.2
-  http: ^1.1.0
   flutter_facebook_auth: ^4.0.0
   google_sign_in: ^6.1.5
   dio: ^4.0.4
   gallery_saver: ^2.3.2
+  flutter_local_notifications: ^16.1.0
+  firebase_messaging: ^14.7.2
+  http: ^0.13.6
+  just_audio: ^0.9.35
 
 
 dev_dependencies:
