--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,8 @@ dependencies:
   just_audio: ^0.9.35
   flutter_cache_manager: ^3.3.1
   share_plus: ^7.2.1
-  video_editor: ^3.0.0
+  video_trimmer: ^3.0.1
+  ffmpeg_kit_flutter: ^6.0.3
 
 
 
